bug-patterns/Bug_Collection/OPENMP/Bug11/Explanation.txt
main function is required to run a standalone C/C++ program.


* Error message

```
buggy_version.c:6:9: error: expected declaration specifiers before ‘#pragma’
 #pragma omp parallel
         ^~~
buggy_version.c:7:1: error: expected identifier or ‘(’ before ‘{’ token
 {
 ^
```
